chore: prepare configuration for tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,8 @@
 {
   "files.exclude": {
     "node_modules": true,
-    "ember": true,
-    "models": true,
-    "controllers": true,
-    "utils": true,
-    "*.d.ts": true,
-    "**/*.js": true,
-    "**/*.map": true,
-    "*.tgz": true,
-    "headers": true,
-    "phoenix": true,
-    "package-lock.json": true,
-    "views": true,
-    "configuration": true,
-    "kaen-passport": true
+    "coverage": true,
+    ".nyc_output": true,
+    "package-lock.json": true
   }
 }
