--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.0.0",
     "@types/passport": "^1.0.0",
+    "axios": "^0.19.0",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
