--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@kaenjs/core",
   "version": "0.0.0",
   "description": "BackEnd NodeJS Framework",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
-    "test": "npm test"
+    "cover": "nyc mocha"
   },
   "keywords": [
     "Framework",
@@ -39,9 +40,8 @@
     "node": ">=10.0.0"
   },
   "files": [
-    "**/*.js",
-    "package.json",
-    "**/*.d.ts"
+    "lib/**/*.*",
+    "package.json"
   ],
   "readme": "README.md"
 }
