--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "es2018"
     ],
     "module": "commonjs",
-    "outDir": "./",
+    "outDir": "./lib",
     "alwaysStrict":true,
     "sourceMap": true,
     "declaration": true,
