--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,11 +18,16 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm ci
+        npm i -g semantic-release
+        npm i -g codeclimate-test-reporter
     - name: Test & Cover
       run: npm run cover
     - name: Build
       run: npm run build --if-present
+    - name: CodeClimate
+      run: codeclimate-test-reporter < coverage/lcov.info
     - name: Semantic Release
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
